# PyPoc

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  PyPocLibrary.cpp  PyPocLibrary.h  README.md  main.cpp  renovate.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: Linux-CI.yml  Windows-CI.yml  macOS-CI.yml
custom-triplets/: x64-win10-dbg.cmake  x64-win10-rel.cmake  x64-win10-static-md.cmake  x64-win10-static.cmake  x64-win10.cmake
script/: bootstrap  bootstrap-on-linux.sh  bootstrap-on-macOS.sh  build  build.ps1  cibuild  docker-entrypoint.sh  local-test-ci.sh  test.ps1
